# orm-flow

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: annotate.py  harmonize.py  main.py  orm.py  parse_musicxml.py  pdf_to_img.py  settings.py
app/static/: index.html  script.js  style.css
docker/: dockerfile
