[tool.poetry]
name = "omr-notes-extractor"
version = "0.1.0"
description = "Extrai notas de partituras PDF via OMR (Audiveris) + MusicXML"
authors = ["Rafaela Silva Ribeiro"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version="^0.30.0"}
music21 = "^9.0.0"
pdf2image = "^1.17.0"
pillow = "^10.4.0"
pydantic = "^2.8.0"
python-multipart = "^0.0.9"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
